[gd_scene load_steps=6 format=2]

[ext_resource path="res://script/intro.gd" type="Script" id=1]
[ext_resource path="res://sprite/yhy logo2.png" type="Texture" id=2]
[ext_resource path="res://sprite/godot logo.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "fade"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("fade:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 1.3, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "reset"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("godot logo:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("yhy logo2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("fade:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="intro" type="Node2D"]
script = ExtResource( 1 )

[node name="white" type="ColorRect" parent="."]
margin_right = 720.0
margin_bottom = 1280.0

[node name="yhy logo2" type="Sprite" parent="."]
visible = false
position = Vector2( 362, 620 )
texture = ExtResource( 2 )

[node name="godot logo" type="Sprite" parent="."]
position = Vector2( 369, 619 )
texture = ExtResource( 3 )

[node name="fade" type="ColorRect" parent="."]
margin_right = 720.0
margin_bottom = 1280.0
color = Color( 0, 0, 0, 1 )

[node name="anim" type="AnimationPlayer" parent="."]
anims/fade = SubResource( 1 )
anims/reset = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true
autostart = true

[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
